Added imagesloaded.js to solve the overlapping issue. Need to style more.

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -61,21 +61,6 @@
           "parents": [],
           "type": "html"
         },
-        "1a24f890": {
-          "id": "1a24f890",
-          "path": "masonry.pkgd.js",
-          "output": "masonry.pkgd-dist.js",
-          "name": "masonry.pkgd.js",
-          "category": "JS",
-          "autoCompile": false,
-          "uglify": true,
-          "mangle": true,
-          "sourceMaps": false,
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "javascript"
-        },
         "9c9bc024": {
           "id": "9c9bc024",
           "path": "css/_mq.scss",
@@ -440,6 +425,36 @@
           "optimized": false,
           "height": 1200,
           "width": 635
+        },
+        "90d9b243": {
+          "id": "90d9b243",
+          "path": "js/masonry.pkgd.js",
+          "output": "js/masonry.pkgd-dist.js",
+          "name": "masonry.pkgd.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
+        },
+        "506754cd": {
+          "id": "506754cd",
+          "path": "js/imagesloaded.pkgd.js",
+          "output": "js/imagesloaded.pkgd-dist.js",
+          "name": "imagesloaded.pkgd.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
