Added another gallery page. Styled the nav to show which page you're on.

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -455,6 +455,459 @@
           "imported": false,
           "parents": [],
           "type": "javascript"
+        },
+        "5ecfc54c": {
+          "id": "5ecfc54c",
+          "path": "i/gridgallery-15-th.jpg",
+          "output": "i/gridgallery-15-th.jpg",
+          "name": "gridgallery-15-th.jpg",
+          "category": "IMAGE",
+          "size": 166410,
+          "type": "jpg",
+          "initialSize": 166410,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "17909b52": {
+          "id": "17909b52",
+          "path": "i/gridgallery-14-th.jpg",
+          "output": "i/gridgallery-14-th.jpg",
+          "name": "gridgallery-14-th.jpg",
+          "category": "IMAGE",
+          "size": 159660,
+          "type": "jpg",
+          "initialSize": 159660,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "90f1c881": {
+          "id": "90f1c881",
+          "path": "i/gridgallery-13-th.jpg",
+          "output": "i/gridgallery-13-th.jpg",
+          "name": "gridgallery-13-th.jpg",
+          "category": "IMAGE",
+          "size": 79001,
+          "type": "jpg",
+          "initialSize": 79001,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "e9a19cb9": {
+          "id": "e9a19cb9",
+          "path": "i/gridgallery-12-th.jpg",
+          "output": "i/gridgallery-12-th.jpg",
+          "name": "gridgallery-12-th.jpg",
+          "category": "IMAGE",
+          "size": 142897,
+          "type": "jpg",
+          "initialSize": 142897,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "342affab": {
+          "id": "342affab",
+          "path": "i/gridgallery-11-th.jpg",
+          "output": "i/gridgallery-11-th.jpg",
+          "name": "gridgallery-11-th.jpg",
+          "category": "IMAGE",
+          "size": 67167,
+          "type": "jpg",
+          "initialSize": 67167,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "6064d308": {
+          "id": "6064d308",
+          "path": "i/gridgallery-10-th.jpg",
+          "output": "i/gridgallery-10-th.jpg",
+          "name": "gridgallery-10-th.jpg",
+          "category": "IMAGE",
+          "size": 60747,
+          "type": "jpg",
+          "initialSize": 60747,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "f1a361f0": {
+          "id": "f1a361f0",
+          "path": "i/gridgallery-09-th.jpg",
+          "output": "i/gridgallery-09-th.jpg",
+          "name": "gridgallery-09-th.jpg",
+          "category": "IMAGE",
+          "size": 83958,
+          "type": "jpg",
+          "initialSize": 83958,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "2baee495": {
+          "id": "2baee495",
+          "path": "i/gridgallery-08-th.jpg",
+          "output": "i/gridgallery-08-th.jpg",
+          "name": "gridgallery-08-th.jpg",
+          "category": "IMAGE",
+          "size": 128174,
+          "type": "jpg",
+          "initialSize": 128174,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "e8d49036": {
+          "id": "e8d49036",
+          "path": "i/gridgallery-06-th.jpg",
+          "output": "i/gridgallery-06-th.jpg",
+          "name": "gridgallery-06-th.jpg",
+          "category": "IMAGE",
+          "size": 142095,
+          "type": "jpg",
+          "initialSize": 142095,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "d20613ea": {
+          "id": "d20613ea",
+          "path": "i/gridgallery-05-th.jpg",
+          "output": "i/gridgallery-05-th.jpg",
+          "name": "gridgallery-05-th.jpg",
+          "category": "IMAGE",
+          "size": 95094,
+          "type": "jpg",
+          "initialSize": 95094,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "01b8127d": {
+          "id": "01b8127d",
+          "path": "i/gridgallery-04-th.jpg",
+          "output": "i/gridgallery-04-th.jpg",
+          "name": "gridgallery-04-th.jpg",
+          "category": "IMAGE",
+          "size": 173944,
+          "type": "jpg",
+          "initialSize": 173944,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "89ae9d7b": {
+          "id": "89ae9d7b",
+          "path": "i/gridgallery-03-th.jpg",
+          "output": "i/gridgallery-03-th.jpg",
+          "name": "gridgallery-03-th.jpg",
+          "category": "IMAGE",
+          "size": 39974,
+          "type": "jpg",
+          "initialSize": 39974,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "a4004dc9": {
+          "id": "a4004dc9",
+          "path": "i/gridgallery-02-th.jpg",
+          "output": "i/gridgallery-02-th.jpg",
+          "name": "gridgallery-02-th.jpg",
+          "category": "IMAGE",
+          "size": 72532,
+          "type": "jpg",
+          "initialSize": 72532,
+          "optimized": false,
+          "height": 600,
+          "width": 400
+        },
+        "4b42de0d": {
+          "id": "4b42de0d",
+          "path": "i/gridgallery-07-th.jpg",
+          "output": "i/gridgallery-07-th.jpg",
+          "name": "gridgallery-07-th.jpg",
+          "category": "IMAGE",
+          "size": 60012,
+          "type": "jpg",
+          "initialSize": 60012,
+          "optimized": false,
+          "height": 400,
+          "width": 400
+        },
+        "e9de68f0": {
+          "id": "e9de68f0",
+          "path": "i/gridgallery-01-th.jpg",
+          "output": "i/gridgallery-01-th.jpg",
+          "name": "gridgallery-01-th.jpg",
+          "category": "IMAGE",
+          "size": 81305,
+          "type": "jpg",
+          "initialSize": 81305,
+          "optimized": false,
+          "height": 364,
+          "width": 364
+        },
+        "0fda2bd6": {
+          "id": "0fda2bd6",
+          "path": "favicon.png",
+          "output": "favicon.png",
+          "name": "favicon.png",
+          "category": "IMAGE",
+          "size": 6909,
+          "type": "png",
+          "initialSize": 6909,
+          "optimized": false,
+          "height": 100,
+          "width": 100
+        },
+        "ec522187": {
+          "id": "ec522187",
+          "path": "music.html",
+          "output": "music.html",
+          "name": "music.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "0def9c4d": {
+          "id": "0def9c4d",
+          "path": "i/music-01.jpg",
+          "output": "i/music-01.jpg",
+          "name": "music-01.jpg",
+          "category": "IMAGE",
+          "size": 260259,
+          "type": "jpg",
+          "initialSize": 260259,
+          "optimized": false,
+          "height": 1200,
+          "width": 800
+        },
+        "822fb665": {
+          "id": "822fb665",
+          "path": "i/music-01-th.jpg",
+          "output": "i/music-01-th.jpg",
+          "name": "music-01-th.jpg",
+          "category": "IMAGE",
+          "size": 72133,
+          "type": "jpg",
+          "initialSize": 72133,
+          "optimized": false,
+          "height": 600,
+          "width": 400
+        },
+        "ecfd9527": {
+          "id": "ecfd9527",
+          "path": "i/music-02.jpg",
+          "output": "i/music-02.jpg",
+          "name": "music-02.jpg",
+          "category": "IMAGE",
+          "size": 204408,
+          "type": "jpg",
+          "initialSize": 204408,
+          "optimized": false,
+          "height": 800,
+          "width": 1200
+        },
+        "4519c7ef": {
+          "id": "4519c7ef",
+          "path": "i/music-02-th.jpg",
+          "output": "i/music-02-th.jpg",
+          "name": "music-02-th.jpg",
+          "category": "IMAGE",
+          "size": 56738,
+          "type": "jpg",
+          "initialSize": 56738,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "b1f332ae": {
+          "id": "b1f332ae",
+          "path": "i/music-03.jpg",
+          "output": "i/music-03.jpg",
+          "name": "music-03.jpg",
+          "category": "IMAGE",
+          "size": 258678,
+          "type": "jpg",
+          "initialSize": 258678,
+          "optimized": false,
+          "height": 800,
+          "width": 1200
+        },
+        "8572be48": {
+          "id": "8572be48",
+          "path": "i/music-03-th.jpg",
+          "output": "i/music-03-th.jpg",
+          "name": "music-03-th.jpg",
+          "category": "IMAGE",
+          "size": 74615,
+          "type": "jpg",
+          "initialSize": 74615,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "635be3c2": {
+          "id": "635be3c2",
+          "path": "i/music-04.jpg",
+          "output": "i/music-04.jpg",
+          "name": "music-04.jpg",
+          "category": "IMAGE",
+          "size": 316746,
+          "type": "jpg",
+          "initialSize": 316746,
+          "optimized": false,
+          "height": 800,
+          "width": 1200
+        },
+        "fe6a8f8b": {
+          "id": "fe6a8f8b",
+          "path": "i/music-04-th.jpg",
+          "output": "i/music-04-th.jpg",
+          "name": "music-04-th.jpg",
+          "category": "IMAGE",
+          "size": 80995,
+          "type": "jpg",
+          "initialSize": 80995,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "c526dfb4": {
+          "id": "c526dfb4",
+          "path": "i/music-05.jpg",
+          "output": "i/music-05.jpg",
+          "name": "music-05.jpg",
+          "category": "IMAGE",
+          "size": 282560,
+          "type": "jpg",
+          "initialSize": 282560,
+          "optimized": false,
+          "height": 800,
+          "width": 1200
+        },
+        "fdae3ae1": {
+          "id": "fdae3ae1",
+          "path": "i/music-05-th.jpg",
+          "output": "i/music-05-th.jpg",
+          "name": "music-05-th.jpg",
+          "category": "IMAGE",
+          "size": 75782,
+          "type": "jpg",
+          "initialSize": 75782,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "a0aef3a2": {
+          "id": "a0aef3a2",
+          "path": "i/music-06.jpg",
+          "output": "i/music-06.jpg",
+          "name": "music-06.jpg",
+          "category": "IMAGE",
+          "size": 283607,
+          "type": "jpg",
+          "initialSize": 283607,
+          "optimized": false,
+          "height": 800,
+          "width": 1200
+        },
+        "ad38ca33": {
+          "id": "ad38ca33",
+          "path": "i/music-06-th.jpg",
+          "output": "i/music-06-th.jpg",
+          "name": "music-06-th.jpg",
+          "category": "IMAGE",
+          "size": 91055,
+          "type": "jpg",
+          "initialSize": 91055,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "d2f8f88e": {
+          "id": "d2f8f88e",
+          "path": "i/music-07.jpg",
+          "output": "i/music-07.jpg",
+          "name": "music-07.jpg",
+          "category": "IMAGE",
+          "size": 234511,
+          "type": "jpg",
+          "initialSize": 234511,
+          "optimized": false,
+          "height": 800,
+          "width": 1200
+        },
+        "ea9542e6": {
+          "id": "ea9542e6",
+          "path": "i/music-07-th.jpg",
+          "output": "i/music-07-th.jpg",
+          "name": "music-07-th.jpg",
+          "category": "IMAGE",
+          "size": 57964,
+          "type": "jpg",
+          "initialSize": 57964,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "216a4ac1": {
+          "id": "216a4ac1",
+          "path": "i/music-08.jpg",
+          "output": "i/music-08.jpg",
+          "name": "music-08.jpg",
+          "category": "IMAGE",
+          "size": 234074,
+          "type": "jpg",
+          "initialSize": 234074,
+          "optimized": false,
+          "height": 800,
+          "width": 1200
+        },
+        "8180229e": {
+          "id": "8180229e",
+          "path": "i/music-08-th.jpg",
+          "output": "i/music-08-th.jpg",
+          "name": "music-08-th.jpg",
+          "category": "IMAGE",
+          "size": 74992,
+          "type": "jpg",
+          "initialSize": 74992,
+          "optimized": false,
+          "height": 400,
+          "width": 600
+        },
+        "e1b6c8f5": {
+          "id": "e1b6c8f5",
+          "path": "i/music-09.jpg",
+          "output": "i/music-09.jpg",
+          "name": "music-09.jpg",
+          "category": "IMAGE",
+          "size": 275301,
+          "type": "jpg",
+          "initialSize": 275301,
+          "optimized": false,
+          "height": 798,
+          "width": 1200
+        },
+        "2ad1d3bd": {
+          "id": "2ad1d3bd",
+          "path": "i/music-09-th.jpg",
+          "output": "i/music-09-th.jpg",
+          "name": "music-09-th.jpg",
+          "category": "IMAGE",
+          "size": 275301,
+          "type": "jpg",
+          "initialSize": 275301,
+          "optimized": false,
+          "height": 798,
+          "width": 1200
         }
       },
       "deploymentHistory": {},
