--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
+    "gulp-imagemin": "^2.3.0",
+    "gulp-minify": "0.0.5",
     "gulp-minify-css": "^1.0.0",
     "gulp-sass": "^1.3.3"
   }
