Fixed some responsive issues.

--- a/prepros.cfg
+++ b/prepros.cfg
@@ -67,7 +67,7 @@
           "output": "css/_mq.css",
           "name": "_mq.scss",
           "category": "CSS",
-          "autoCompile": false,
+          "autoCompile": true,
           "autoprefixer": false,
           "sourceMaps": false,
           "libSass": true,
@@ -76,10 +76,8 @@
           "fullCompass": false,
           "outputStyle": "expanded",
           "customOutput": false,
-          "imported": true,
-          "parents": [
-            "b0a01518"
-          ],
+          "imported": false,
+          "parents": [],
           "type": "sass"
         },
         "dc11a8b3": {
@@ -908,6 +906,21 @@
           "optimized": false,
           "height": 798,
           "width": 1200
+        },
+        "ce23d4d9": {
+          "id": "ce23d4d9",
+          "path": "js/scripts-min.js",
+          "output": "js/scripts-min-dist.js",
+          "name": "scripts-min.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
